hard-gists/561d5eec7fed9ebf48751d124a77b087/run.log
=== Docker Run Log for 561d5eec7fed9ebf48751d124a77b087 ===
Started at: Mi 29. Okt 15:47:28 CET 2025

[2025-10-29 15:47:28] START: Running container for 561d5eec7fed9ebf48751d124a77b087
[2025-10-29 15:47:29] SUCCESS: Container 8c032d1f4a0d521c55e91dfb025dacea64c8371854fa8f7517b25f9ee6072ea4 started for 561d5eec7fed9ebf48751d124a77b087
=== Container logs for 561d5eec7fed9ebf48751d124a77b087 ===
  File "/snippet.py", line 18
    print x.eval(), y.eval(), z.eval(), tf.gradients(z, x)[0].eval()
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 561d5eec7fed9ebf48751d124a77b087 ===
[2025-10-29 15:47:31] INFO: Container 8c032d1f4a0d521c55e91dfb025dacea64c8371854fa8f7517b25f9ee6072ea4 has stopped
